# planguard

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: agent-guard.yml  agent-multi-plan-guard.yml  agent-pr-guard.yml
.planguard/: log.jsonl
agent_framework/: cli.py
agent_framework/architecture/: analyze_change_impact.py
agent_framework/orchestration/: build_execution_schedule.py  detect_collisions.py  plan_graph.py
agent_framework/planning/: generate_plan.py
agent_framework/safety/: compute_risk_score.py
agent_framework/validation/: validate_plan.py
docs/agents_version_sync_rule/: plan.yaml  status.yaml
docs/architecture/: data_models.yaml  system_boundaries.yaml  system_overview.yaml
docs/backlog_and_sprint_generation/: plan.yaml  status.yaml
docs/contracts/: integration_contracts.yaml
docs/database_safety_enhancements/: plan.yaml  status.yaml
docs/decision_log/: decisions.yaml
docs/diff_based_safety_and_pypi_hardening/: plan.yaml  status.yaml
docs/example_plan/: backlog.yaml  collision_detection.yaml  dependency_map.yaml  handoff.yaml  plan.yaml  progress.yaml  regression_test_plan.yaml  risk_register.yaml  sprint_plan.yaml
docs/governance/: agent_memory.yaml  architecture_change_log.yaml
docs/handoff_doc_gitignore/: plan.yaml  status.yaml
docs/new_format_only_enforcement/: plan.yaml  status.yaml
docs/package_repair/: backlog.yaml  collision_detection.yaml  dependency_map.yaml  handoff.yaml  plan.yaml  progress.yaml  regression_test_plan.yaml  risk_register.yaml  sprint_plan.yaml
docs/planning/: active_plans.yaml  collision_registry.yaml  execution_schedule.yaml  plan_file_map.yaml
docs/readme_agent_prompt_clarification/: plan.yaml  status.yaml
docs/readme_intro_summary/: plan.yaml  (+1 more)
planguard/: cli.py  config.py  pathspec.py
scripts/: analyze_change_impact.py  build_execution_schedule.py  check_file_ownership.py  check_pr_changes.py  compute_plan_dag.py  compute_risk_score.py  detect_collisions.py  generate_architecture_diagram.py  generate_plan.py  init-git.ps1  post_restructure_fix.ps1  restructure_framework.ps1  validate_active_plans.py  validate_plan.py
tests/: test_cli.py  test_context.py  test_modules.py  test_plan_graph.py  test_scripts.py
(+66 files in other folders)
