[project]
name = "planguard"
version = "0.7"
description = "Make AI-assisted development safer, auditable, and release-ready without breaking normal CLI and git workflows"
authors = [
    { name = "Arkimetrix Analytics Ltd." }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<4.0"
keywords = ["ai", "agents", "cli", "developer-tools", "governance", "pypi"]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0.3,<7.0.0",
    "networkx>=3.0",
    "typer>=0.9",
    "rich>=13"
]

[project.urls]
Homepage = "https://github.com/DBArkimetrix/planguard"
Repository = "https://github.com/DBArkimetrix/planguard"
Issues = "https://github.com/DBArkimetrix/planguard/issues"
Documentation = "https://github.com/DBArkimetrix/planguard#readme"

[tool.poetry]
packages = [{ include = "planguard" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
planguard = "planguard.cli:main"
